# acb

./: .coverage  .coverage-ratchet.json  .crackerjack-hooks-updated  .gitignore  .mcp.json  .mcp.json.backup  .mcp.json.bak  .pre-commit-config-ai.yaml  .pre-commit-config.yaml  .windsurfrules  ACB_ALTERNATIVES_ANALYSIS.md  ACB_COMPARISON.md  ACB_COMPETITIVE_ANALYSIS.md  ACB_COMPONENT_FRAMEWORK_COMPETITIVE_ANALYSIS.md  ACB_ENHANCEMENTS.md  ACB_EXECUTIVE_SUMMARY.md  ACB_FUTURE_DIRECTIONS.md  ACB_MCP_COMPARISON.md  ACB_ROADMAP.md  ACB_STRATEGIC_ROADMAP.md  ACB_UNIFIED_PLAN.md  ACB_WHEEL_REINVENTION_ANALYSIS.md  AGENTS.md  AI-CODE-FIXING-ARCHITECTURE.md  AI-FIX-INVESTIGATION-REPORT.md  ARCHITECTURE-OPTIONS.md  CHANGELOG.md  CLAUDE.md  COMPLEXITY_METRICS.md  COMPLEXITY_REDUCTION_SUMMARY.md  COVERAGE_SUMMARY.md  CRACKERJACK-AUTO-FIX-ARCHITECTURE-ANALYSIS.md  CRACKERJACK-FIX-IMPLEMENTATION-PLAN.md  DISCOVERY_REFACTORING_PLAN.md  DISCOVERY_REFACTORING_SUMMARY.md  DOCUMENTATION_AUDIT_REPORT.md  DUAL-INTERFACE-DI-SOLUTIONS.md  EMBEDDING_OPTIMIZATION_FINAL.md  EMBEDDING_OPTIMIZATION_PLAN.md  EMBEDDING_OPTIMIZATION_RESULTS.md  (+90 more)
acb/: CONFIGURATION.md  DEBUG.md  DEPENDENCY-INJECTION.md  LOGGING.md  README.md  __init__.py  __main__.py  cleanup.py  config.py  config_errors.py  console.py  context.py  debug.py  depends.py  discovery_common.py  logger.py  main.py  ssl_config.py  tasks.py  validation.py
acb/actions/: README.md  __init__.py  backup.py  compress.py  configure.py  encode.py  hash.py  mail.py
acb/adapters/: README.md  __init__.py  _tool_adapter_base.py
acb/core/: __init__.py  ssl_config.py
acb/events/: README.md  __init__.py  _base.py  discovery.py  publisher.py  subscriber.py
acb/gateway/: __init__.py  _base.py  analytics.py  auth.py  cache.py  discovery.py  rate_limiting.py  routing.py  security.py  service.py  validation.py
acb/mcp/: README.md  __init__.py  orchestrator.py  parameters.py  registry.py  resources.py  retry.py  serialization.py  server.py  tool_registry.py  tools.py  utils.py
acb/migration/: README.md  __init__.py  _base.py  assessment.py  compatibility.py  manager.py  rollback.py  scripts.py  validator.py
acb/monitoring/: __init__.py  health.py  http.py
acb/queues/: README.md  __init__.py  _base.py  apscheduler.py  discovery.py  memory.py  rabbitmq.py  redis.py  scheduler.py
acb/security/: sanitization.py
acb/services/: README.md  __init__.py  _base.py  discovery.py  error_handling.py  health.py  protocols.py  registry.py  state.py
acb/tasks/: README.md  __init__.py  _base.py  apscheduler.py  discovery.py  memory.py  queue.py  rabbitmq.py  redis.py  scheduler.py
acb/testing/: README.md  __init__.py  async_helpers.py  discovery.py  environment.py  factories.py  fixtures.py  interfaces.py  performance.py  utils.py  validators.py
acb/transformers/: __init__.py  _base.py  discovery.py  engine.py
acb/workflows/: README.md  __init__.py  _base.py  discovery.py  engine.py
adapters/cache/: README.md
adapters/logger/: README.md
backups/: action_encode_backup.py
docs/: ACTION_TEMPLATE.md  ADAPTER_TEMPLATE.md  ARCHITECTURE-DECISION-PROTOCOL-DI.md  ARCHITECTURE.md  ARCHITECTURE_IMPLEMENTATION_GUIDE.md  CONFIGURATION.md  CORE_SYSTEMS_ARCHITECTURE.md  COVERAGE_SUMMARY.md  DOCUMENTATION_AUDIT_REPORT.md  LOGGING.md  MCP_API.md  MIGRATION-0.19.0.md  MIGRATION-GUIDE.md  MIGRATION.md  MONITORING.md  PERFORMANCE-GUIDE.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PLUGIN_ARCHITECTURE.md  QUICK_WINS_COMPLETED.md  README.md  REFACTORING_OPPORTUNITIES.md  REQUESTS-ADAPTER-IMPLEMENTATION-PLAN.md  SECURITY_SANITIZATION.md  TESTING.md  TEST_COVERAGE_INDEX.md  TEST_COVERAGE_INITIATIVE.md  TROUBLESHOOTING.md  VALIDATION.md  VECTOR_ADAPTER_IMPLEMENTATION_PLAN.md  ZUBAN_CONNECTION_ERROR_FIX.md  httpmorph-analysis.md
docs/archived/: REFACTORING_VERIFICATION.md
docs/cleanup/: DOCUMENTATION_CLEANUP_SUMMARY.md  FEATURE_DELETION_SUMMARY.md
docs/code-quality/: FIX_EXPERIMENT_TYPES.md  REFURB_MODERNIZATION_PLAN.md
docs/investigation/: acb-quality-remediation-plan.md  ai-autofix-debug-plan.md  crackerjack-autofix-investigation.md  mcp-workflow-fix-summary.md
docs/optimization/: EMBEDDING_OPTIMIZATION_FINAL.md  EMBEDDING_OPTIMIZATION_RESULTS.md
docs/phase-0/: FINDINGS.md  LFM2_USAGE.md  LFM_VALIDATION_PLAN.md  STATUS.md
docs/planning/: ACB_UNIFIED_PLAN.md  IMPLEMENTATION_STATUS.md  QUEUE_ADAPTER_ARCHITECTURE_REVIEW.md  QUEUE_ADAPTER_PHASE_1_2_COMPLETE.md  QUEUE_ADAPTER_PHASE_3_COMPLETE.md  QUEUE_ADAPTER_PHASE_4_PROGRESS.md  QUEUE_ADAPTER_REMAINING_WORK.md  QUEUE_ADAPTER_UNIFICATION_PLAN.md  RABBITMQ_ADAPTER_IMPLEMENTATION.md  VALIDATION_LAYER_IMPLEMENTATION_PLAN.md
docs/progress/: QUALITY_PROGRESS_SUMMARY.md  SESSION_ACCOMPLISHMENTS.md
docs/refactoring/: DISCOVERY_REFACTORING_SUMMARY.md  QUEUE_MODERNIZATIONS_APPLIED.md  TYPE_FIXES_IMPLEMENTATION.md  TYPE_FIXES_SUMMARY.md  VALIDATION_DECORATORS_REFACTORING_PLAN.md  VALIDATION_DECORATORS_REFACTORING_SUMMARY.md  (+2 more)
examples/: __init__.py  adapter_metadata_demo.py  agnostic_query_demo.py  claude_desktop_config.json  comprehensive_architecture_example.py  enhanced_query_demo.py  mcp_client.py  mcp_demo.py  mcp_server.py  metadata_simple_demo.py  orchestration_example.py  service_example.py  settings_models.yml  settings_services.yml  simple_mcp_example.py
scripts/: apply_refurb_suppress.py  fix_phase1_types.py  fix_syntax_errors.py  test_runner.py
tests/: README.md  TESTING.md  TESTING_GUIDE.md  TEST_IMPROVEMENTS_SUMMARY.md  adapter_class.py  conftest.py  conftest_common.py  conftest_shared.py  patch_adapters.py  run_tests.py  test_actions.py  test_actions_architecture.py  test_adapters.py  test_architecture_patterns.py  test_config.py  test_config_improved.py  test_console.py  test_debug.py  test_depends.py  test_integration_documented_features.py  test_interfaces.py  test_logger.py  test_main.py  test_mcp.py  test_mcp_imports.py  test_mcp_tools.py  test_monitoring_http.py  test_orchestration_patterns.py  test_validation_module.py  test_zuban_connection_error_handling.py  utils.py
transformers/: __init__.py
(+548 files in other folders)
