[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "acb"
version = "0.29.0"
description = "ACB: Asynchronous Component Base"
readme = "README.md"
authors = [
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aioconsole>=0.8.1",
    "anyio>=4.9",
    "attrs>=25.3",
    "bevy>=3.1.0b9",
    "blake3>=1.0.5",
    "brotli>=1.1",
    "devtools>=0.12.2",
    "dill>=0.3,<0.4.dev0",
    "google-api-python-client>=2.176",
    "google-crc32c>=1.7.1",
    "icecream>=2.1.5",
    "inflection>=0.5.1",
    "loguru>=0.7.3",
    "msgspec[toml,yaml]",
    "nest-asyncio>=1.6",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyfiglet>=1.0.3",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.24",
    "toml>=0.10.2",
    "tomli-w>=1.2",
    "uuid-utils>=0.11",
    "uvicorn>=0.30",
    "fastmcp>=2.0.0",
    "mcp-common>=0.2.0",
]

[project.license]
text = "BSD-3-CLAUSE"

[project.urls]
Documentation = "https://github.com/lesleslie/acb"
Homepage = "https://github.com/lesleslie/acb"
Repository = "https://github.com/lesleslie/acb"

[dependency-groups]
dev = [
    "complexipy>=3.2",
    "crackerjack>=0.31",
    "excalidraw-mcp>=0.34.0",
    "pre-commit>=4.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1",
    "pytest-benchmark>=5.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.4",
    "pyyaml>=6.0.2",
    "refurb>=2.1",
    "ruff>=0.12.3",
    "session-mgmt-mcp>=0.3",
]
cache = [
    "acb",
    "aiocache[redis]>=0.12.3",
    "coredis>=4.24",
    "logfire[redis]>=3.24",
]
dns = [
    "boto3>=1.35",
    "google-cloud-dns>=0.35.1",
    "python-cloudflare>=1.0.1",
    "validators>=0.35",
]
ftpd = [
    "aioftp>=0.26.2",
    "asyncssh>=2.21",
]
monitoring = [
    "logfire[system-metrics]>=3.24",
    "sentry-sdk[loguru]>=2.32",
]
requests = [
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=3.24",
    "niquests>=3.14.1",
    "sentry-sdk[httpx]>=2.32",
]
secret = [
    "azure-identity>=1.15",
    "azure-keyvault-secrets>=4.8",
    "cloudflare>=3",
    "google-cloud-secret-manager>=2.24",
    "infisicalsdk>=1.0.9",
]
smtp = [
    "mailgun>=1.1",
]
storage = [
    "adlfs>=2024.12",
    "fsspec>=2025.1",
    "gcsfs>=2025.5.1",
    "s3fs>=2025.5.1",
]
templates = [
    "jinja2>=3.1.6",
    "jinja2-async-environment>=0.14.3",
]
sql = [
    "acb",
    "aiomysql>=0.2",
    "aiosqlite>=0.21",
    "babel>=2.17",
    "duckdb>=0.10.2",
    "duckdb-engine>=0.11.2",
    "greenlet>=3.2.3",
    "logfire[sqlalchemy]>=3.24",
    "pymysql>=1.1.1",
    "sentry-sdk[sqlalchemy]>=2.32",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-libsql>=0.2",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.24",
]
nosql = [
    "acb",
    "beanie>=1.30",
    "google-cloud-firestore>=2.21",
    "motor>=3.7.1",
    "redis-om>=0.3.5",
]
vector = [
    "duckdb>=0.10.2",
    "pinecone-client>=3",
    "qdrant-client>=1.7",
    "weaviate-client>=4",
]
graph = [
    "boto3>=1.26",
    "duckdb>=0.10.2",
    "duckdb-engine>=0.11.2",
    "neo4j>=5",
    "py2neo>=2021",
    "python-arango>=7",
]
ai = [
    "aiohttp>=3.9",
    "anthropic>=0.5",
    "boto3>=1.35",
    "google-cloud-aiplatform>=1.40",
    "httpx[http2]>=0.28.1",
    "ollama>=0.1",
    "onnx>=1.14; python_version<'3.13'",
    "onnxruntime>=1.16; python_version<'3.13'",
    "openai>=1",
    "psutil>=6.1",
    "torch>=2; python_version<'3.13'",
    "transformers>=4.30",
]
embedding = [
    "numpy>=2.1",
    "onnx>=1.14; python_version<'3.13'",
    "onnxruntime>=1.16; python_version<'3.13'",
    "openai>=1",
    "sentence-transformers>=2; python_version<'3.13'",
    "torch>=2; python_version<'3.13'",
    "transformers>=4",
]
reasoning = [
    "langchain>=0.1; python_version<'3.13'",
    "langchain-community>=0.0.20; python_version<'3.13'",
    "langchain-openai>=0.1; python_version<'3.13'",
    "llama-index>=0.9; python_version<'3.13'",
    "llama-index-llms-openai>=0.1; python_version<'3.13'",
    "openai>=1",
    "pydantic>=2",
    "tiktoken>=0.5",
]
models = [
    "attrs>=25.3",
    "msgspec>=0.19",
    "redis-om>=0.3.5",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]
logger = [
    "logly>=0.1.4",
    "structlog>=24",
    "zstandard>=0.21.0",
]
mcp = [
    "fastmcp>=2.0.0",
]
demo = [
    "faker>=37.4",
]
queue-apscheduler = [
    "apscheduler>=4.0.0a1",
]
queue-apscheduler-sql = [
    "apscheduler>=4.0.0a1",
    "sqlalchemy>=2.0.41",
]
queue-apscheduler-mongodb = [
    "apscheduler>=4.0.0a1",
    "pymongo>=4.0",
]
queue-apscheduler-redis = [
    "apscheduler>=4.0.0a1",
    "redis>=4.0",
]
minimal = [
    "aiocache[redis]>=0.12.3",
    "coredis>=4.24",
    "logfire[redis]>=3.24",
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=3.24",
    "niquests>=3.14.1",
    "sentry-sdk[httpx]>=2.32",
]
api = [
    "aiocache[redis]>=0.12.3",
    "coredis>=4.24",
    "logfire[redis]>=3.24",
    "beanie>=1.30",
    "google-cloud-firestore>=2.21",
    "motor>=3.7.1",
    "redis-om>=0.3.5",
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=3.24",
    "niquests>=3.14.1",
    "sentry-sdk[httpx]>=2.32",
    "logfire[system-metrics]>=3.24",
    "sentry-sdk[loguru]>=2.32",
    "azure-identity>=1.15",
    "azure-keyvault-secrets>=4.8",
    "cloudflare>=3",
    "google-cloud-secret-manager>=2.24",
    "infisicalsdk>=1.0.9",
]
microservice = [
    "aiocache[redis]>=0.12.3",
    "coredis>=4.24",
    "logfire[redis]>=3.24",
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=3.24",
    "niquests>=3.14.1",
    "sentry-sdk[httpx]>=2.32",
    "logfire[system-metrics]>=3.24",
    "sentry-sdk[loguru]>=2.32",
    "azure-identity>=1.15",
    "azure-keyvault-secrets>=4.8",
    "cloudflare>=3",
    "google-cloud-secret-manager>=2.24",
    "infisicalsdk>=1.0.9",
]
webapp = [
    "aiocache[redis]>=0.12.3",
    "coredis>=4.24",
    "logfire[redis]>=3.24",
    "aiomysql>=0.2",
    "aiosqlite>=0.21",
    "babel>=2.17",
    "greenlet>=3.2.3",
    "logfire[sqlalchemy]>=3.24",
    "pymysql>=1.1.1",
    "sentry-sdk[sqlalchemy]>=2.32",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-libsql>=0.2",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.24",
    "adlfs>=2024.12",
    "fsspec>=2025.1",
    "gcsfs>=2025.5.1",
    "s3fs>=2025.5.1",
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=3.24",
    "niquests>=3.14.1",
    "sentry-sdk[httpx]>=2.32",
    "logfire[system-metrics]>=3.24",
    "sentry-sdk[loguru]>=2.32",
]
webapp-plus = [
    "aiocache[redis]>=0.12.3",
    "coredis>=4.24",
    "logfire[redis]>=3.24",
    "aiomysql>=0.2",
    "aiosqlite>=0.21",
    "babel>=2.17",
    "greenlet>=3.2.3",
    "logfire[sqlalchemy]>=3.24",
    "pymysql>=1.1.1",
    "sentry-sdk[sqlalchemy]>=2.32",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-libsql>=0.2",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.24",
    "adlfs>=2024.12",
    "fsspec>=2025.1",
    "gcsfs>=2025.5.1",
    "s3fs>=2025.5.1",
    "httpx[http2]>=0.28.1",
    "logfire[httpx]>=3.24",
    "niquests>=3.14.1",
    "sentry-sdk[httpx]>=2.32",
    "logfire[system-metrics]>=3.24",
    "sentry-sdk[loguru]>=2.32",
    "duckdb>=0.10.2",
    "pinecone-client>=3",
    "qdrant-client>=1.7",
    "weaviate-client>=4",
]
cloud-native = [
    "aiocache[redis]>=0.12.3",
    "coredis>=4.24",
    "logfire[redis]>=3.24",
    "aiomysql>=0.2",
    "aiosqlite>=0.21",
    "babel>=2.17",
    "greenlet>=3.2.3",
    "logfire[sqlalchemy]>=3.24",
    "pymysql>=1.1.1",
    "sentry-sdk[sqlalchemy]>=2.32",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-libsql>=0.2",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.24",
    "adlfs>=2024.12",
    "fsspec>=2025.1",
    "gcsfs>=2025.5.1",
    "s3fs>=2025.5.1",
    "azure-identity>=1.15",
    "azure-keyvault-secrets>=4.8",
    "cloudflare>=3",
    "google-cloud-secret-manager>=2.24",
    "infisicalsdk>=1.0.9",
    "logfire[system-metrics]>=3.24",
    "sentry-sdk[loguru]>=2.32",
    "boto3>=1.35",
    "google-cloud-dns>=0.35.1",
    "python-cloudflare>=1.0.1",
    "validators>=0.35",
]
dataplatform = [
    "aiomysql>=0.2",
    "aiosqlite>=0.21",
    "babel>=2.17",
    "greenlet>=3.2.3",
    "logfire[sqlalchemy]>=3.24",
    "pymysql>=1.1.1",
    "sentry-sdk[sqlalchemy]>=2.32",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-libsql>=0.2",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.24",
    "beanie>=1.30",
    "google-cloud-firestore>=2.21",
    "motor>=3.7.1",
    "redis-om>=0.3.5",
    "adlfs>=2024.12",
    "fsspec>=2025.1",
    "gcsfs>=2025.5.1",
    "s3fs>=2025.5.1",
    "logfire[system-metrics]>=3.24",
    "sentry-sdk[loguru]>=2.32",
]
gcp = [
    "boto3>=1.35",
    "google-cloud-dns>=0.35.1",
    "python-cloudflare>=1.0.1",
    "validators>=0.35",
    "azure-identity>=1.15",
    "azure-keyvault-secrets>=4.8",
    "cloudflare>=3",
    "google-cloud-secret-manager>=2.24",
    "infisicalsdk>=1.0.9",
    "beanie>=1.30",
    "google-cloud-firestore>=2.21",
    "motor>=3.7.1",
    "redis-om>=0.3.5",
    "adlfs>=2024.12",
    "fsspec>=2025.1",
    "gcsfs>=2025.5.1",
    "s3fs>=2025.5.1",
]
all = [
    "aiohttp>=3.9",
    "anthropic>=0.5",
    "boto3>=1.35",
    "google-cloud-aiplatform>=1.40",
    "httpx[http2]>=0.28.1",
    "ollama>=0.1",
    "onnx>=1.14; python_version<'3.13'",
    "onnxruntime>=1.16; python_version<'3.13'",
    "openai>=1",
    "psutil>=6.1",
    "torch>=2; python_version<'3.13'",
    "transformers>=4.30",
    "aiocache[redis]>=0.12.3",
    "coredis>=4.24",
    "logfire[redis]>=3.24",
    "google-cloud-dns>=0.35.1",
    "python-cloudflare>=1.0.1",
    "validators>=0.35",
    "numpy>=2.1",
    "sentence-transformers>=2; python_version<'3.13'",
    "aioftp>=0.26.2",
    "asyncssh>=2.21",
    "attrs>=25.3",
    "msgspec>=0.19",
    "redis-om>=0.3.5",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "logfire[system-metrics]>=3.24",
    "sentry-sdk[loguru]>=2.32",
    "beanie>=1.30",
    "google-cloud-firestore>=2.21",
    "motor>=3.7.1",
    "langchain>=0.1; python_version<'3.13'",
    "langchain-community>=0.0.20; python_version<'3.13'",
    "langchain-openai>=0.1; python_version<'3.13'",
    "llama-index>=0.9; python_version<'3.13'",
    "llama-index-llms-openai>=0.1; python_version<'3.13'",
    "pydantic>=2",
    "tiktoken>=0.5",
    "logfire[httpx]>=3.24",
    "niquests>=3.14.1",
    "sentry-sdk[httpx]>=2.32",
    "azure-identity>=1.15",
    "azure-keyvault-secrets>=4.8",
    "cloudflare>=3",
    "google-cloud-secret-manager>=2.24",
    "infisicalsdk>=1.0.9",
    "mailgun>=1.1",
    "aiomysql>=0.2",
    "aiosqlite>=0.21",
    "babel>=2.17",
    "greenlet>=3.2.3",
    "logfire[sqlalchemy]>=3.24",
    "pymysql>=1.1.1",
    "sentry-sdk[sqlalchemy]>=2.32",
    "sqlalchemy-libsql>=0.2",
    "sqlalchemy-utils>=0.41.2",
    "adlfs>=2024.12",
    "fsspec>=2025.1",
    "gcsfs>=2025.5.1",
    "s3fs>=2025.5.1",
    "duckdb>=0.10.2",
    "pinecone-client>=3",
    "qdrant-client>=1.7",
    "weaviate-client>=4",
    "fastmcp>=2.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    "*_test.py",
    "test_*.py",
    "tests/",
]
fix = true
unsafe-fixes = true
show-fixes = true
output-format = "full"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "C901",
    "D",
    "F",
    "I",
    "UP",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "E402",
    "F821",
    "UP040",
]
fixable = [
    "ALL",
]
unfixable = []

[tool.ruff.lint.isort]
no-lines-before = [
    "first-party",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "*/data/*,tests/*,.git/*,.mypy_cache/*,htmlcov/*,test_*.py,*_test.py"
quiet-level = 3
ignore-words-list = "crate,uptodate,nd,nin,anull"

[tool.pyproject-fmt]
column_width = 120
indent = 4

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = [
    "test_*.py",
    "*_test.py",
]
testpaths = [
    "tests",
    "acb",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "unit: marks test as a unit test",
    "benchmark: mark test as a benchmark (disables parallel execution)",
    "integration: marks test as an integration test",
]
timeout = 300
timeout_method = "thread"
addopts = "--cov=acb --cov-report=term"
filterwarnings = [
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
]

[tool.pytest.benchmark]
disable_gc = true
warmup = false
warmup_iterations = 0
min_rounds = 1
max_time = 5.0

[tool.coverage.run]
branch = false
source = [
    "acb",
]
data_file = ".coverage"
parallel = false
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
    "*/test_*.py",
    "*/_test.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError",
    "def __str__",
    "@abstractmethod",
]
ignore_errors = false

[tool.pyright]
verboseOutput = true
include = [
    "tests",
    "acb",
]
exclude = [
    "scratch",
    "build",
    ".venv",
    "dist",
]
extraPaths = [
    ".venv/lib/python3.13/site-packages/",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = false
reportUnknownArgumentType = "warning"
reportInvalidTypeForm = "warning"
reportUnknownLambdaType = "warning"
reportUnknownParameterType = "warning"
reportPrivateUsage = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnnecessaryComparison = "warning"
reportConstantRedefinition = "warning"
pythonVersion = "3.13"

[tool.creosote]
paths = [
    "acb",
]
deps-file = "pyproject.toml"
exclude-deps = [
    "uvicorn",
    "pre-commit",
    "pytest-mock",
    "nest-asyncio",
    "pytest",
    "google-api-python-client",
    "pyyaml",
    "pyfiglet",
    "pytest-timeout",
    "uv",
    "pytest-cov",
    "pytest-xdist",
    "pytest-asyncio",
    "uuid-utils",
    "pytest-benchmark",
    "inflection",
    "keyring",
    "tomli-w",
    "pyleak",
    "pydantic-settings",
    "attrs",
    "google-crc32c",
    "hatchling",
    "toml",
    "mcp-common",
]

[tool.refurb]
enable_all = true
quiet = true
python_version = "3.13"
ignore = [
    "FURB184",
    "FURB120",
]

[tool.bandit]
target = [
    "tests",
    "acb",
]
skips = [
    "B311",
    "B704",
    "B301",
    "B403",
    "B404",
    "B105",
    "B106",
    "B101",
    "B608",
    "B603",
    "B602",
    "B607",
]
exclude_dirs = [
    "tests/",
    "test_*.py",
    "*_test.py",
]

[tool.vulture]
min_confidence = 86
paths = [
    "acb",
]
exclude = [
    "tests/",
    "test_*.py",
    "*_test.py",
]
ignore_names = [
    "cls",
]

[tool.uv]
keyring-provider = "subprocess"
index-url = "https://pypi.org/simple/"

[tool.uv.sources.acb]
workspace = true

[tool.mypy]
python_version = "3.13"
files = [
    "acb",
]
publish-url = "https://upload.pypi.org/legacy/"
check-url = "https://pypi.org/simple/"
prerelease = "allow"

[tool.complexipy]
default_pattern = "**/*.py"
exclude_patterns = [
    "**/tests/**",
    "**/test_*.py",
    "acb/adapters/vector/**",
]
max_complexity = 15
